--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "precommit": "prettier --write ."
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "husky": "^8.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -30,9 +31,9 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "husky": "^8.0.0",
     "prettier": "^3.0.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5",
-    "husky": "^8.0.0"
+    "vite": "^4.4.5"
   }
 }
