--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
+    "jest-mock-axios": "^4.7.3",
     "jest-svg-transformer": "^1.0.0",
     "prettier": "^3.0.3",
     "ts-jest": "^29.1.1",
