feat: add husky prepush

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "prepare": "husky install",
     "precommit": "prettier --write .",
     "test": "jest",
-    "test:cover": "npx jest --coverage"
+    "test:cover": "npx jest --coverage",
+    "prepush": "npm run test:cover"
   },
   "dependencies": {
     "axios": "^1.5.1",
