--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "precommit": "prettier --write .",
     "test": "jest",
     "test:cover": "npx jest --coverage",
-    "prepush": "npm run test:cover"
+    "prepush": "npm run test"
   },
   "dependencies": {
     "axios": "^1.5.1",
