--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "prepare": "husky install",
     "precommit": "prettier --write .",
     "test": "jest",
-    "test:cover": "npx jest --coverage",
-    "prepush": "npm run test"
+    "test:cover": "npx jest --coverage"
   },
   "dependencies": {
     "axios": "^1.5.1",
