--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "test:cover": "npx jest --coverage"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
     "jest-environment-jsdom": "^29.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
