--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,9 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-      "@/*": ["./src/*"]
+      "@/types/*": ["./types/*"],
+      "@styles/*": ["./styles/*"],
+      "@components/*": ["./components/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
