--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next-redux-wrapper": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-error-boundary": "^4.0.11",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1"
   },
