--- a/package.json
+++ b/package.json
@@ -7,23 +7,21 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.7",
     "next": "^14.0.3",
-    "next-redux-wrapper": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-error-boundary": "^4.0.11",
-    "react-redux": "^8.1.3",
-    "redux": "^4.2.1"
+    "react-error-boundary": "^4.0.11"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.1.2",
+    "@testing-library/jest-dom": "6.1.2",
+    "@testing-library/react": "14.0.0",
+    "@testing-library/user-event": "14.4.3",
     "@types/jest": "^29.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -31,6 +29,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5"
   }
 }
