--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest --coverage",
-    "test:ci": "jest --ci"
+    "test:ci": "jest --ci",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "^14.0.3",
@@ -29,8 +30,10 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "eslint-plugin-testing-library": "^6.2.0",
+    "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^5"
   }
